2004-12-04  Matthias Clasen  <mclasen@redhat.com>

	* glib/gqueue.c (g_queue_link_index): Return -1 if queue is 
	NULL.  (#159530, Philippe Blain)

2004-12-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version.

	* === Released 2.5.7 ===
	
2004-12-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols: Protect the the various push/pop allocator
	functions by #ifndef DISABLE_MEM_POOLS.  (#160215, Frederic Crozat)

	* glib/makegalias.pl: Support #ifndef'ed sections.

	* glib/gutils.c (g_get_system_config_dirs): Don't forget to 
	initialize g_system_config_dirs.  (#160213, Frederic Crozat)

Wed Dec  1 17:04:37 2004  Manish Singh  <yosh@gimp.org>

	* glib/gstring.h (g_string_append_c_inline): actually enable (and
	fix up the length test).

2004-11-30  Tor Lillqvist  <tml@iki.fi>

	* glib/Makefile.am (glib.def): gcc -E complains "linker input file
	unused because linking not done" if told to preprocess the
	glib.symbols file. Use '-' and redirection to pass it as standard
	input instead.

2004-11-30  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2004-11-30  Tor Lillqvist  <tml@iki.fi>

	* glib/gspawn-win32-helper.c (WinMain): Also check errno to detect
	true errors from spawn*(). (#157258, reported by Bruce Hochstetler)

2004-11-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmacros.h (G_GNUC_MALLOC): Define empty for gcc 2.95.

	* glib/gmarkup.c (unescape_text_state_after_charref_hash): 
	Avoid a strndup() here, noticed by Morten Welinder.

2004-11-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/gmarkup.c: Remove leftover noinline attributes.
	(is_name_start_char, is_name_char): Avoid possible reads
	beyond the end of g_ascii_table.

	* glib/Makefile.am: Use the perl found by configure.  (#149826,
	Morten Welinder)

Sun Nov 28 13:13:56 2004  Manish Singh  <yosh@gimp.org>

	* glib/abicheck.sh: filter G_GNUC before PRIVATE so $ is still true.

	* tests/utf8-validate.c: cast pointer math to gint for error print
	message.
